<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HabitStyle"
            android:paddingRight="20dp"
            android:text="@string/habit_text_name" />

        <EditText
            android:id="@+id/edit_habit_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_habit_name"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_habit_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HabitStyle"
            android:text="@string/habit_type" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HabitStyle"
            android:text="@string/habit_duration" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_habit_duration"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_habit_duration"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_duration_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_habit_duration" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HabitStyle"
            android:text="@string/habit_time" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_time"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_Place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HabitStyle"
            android:text="@string/habit_location" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_habit_location"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_habit_location"
                android:inputType="text" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
